# synbiobook

./: .buildinfo  README.html  README.md  conf.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.github/workflows/: build-book.yml
_sources/: index.rst.txt
